--- a/src/Transfer/Transfer.module.css
+++ b/src/Transfer/Transfer.module.css
@@ -51,7 +51,7 @@
 .transferListSearchInput:focus {
   outline: none;
   border-color: #40a9ff;
-  box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2);
+  box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2%);
 }
 
 .transferListContent {
