--- a/src/Anchor/Anchor.module.css
+++ b/src/Anchor/Anchor.module.css
@@ -1,7 +1,7 @@
 .anchor {
   background-color: #fff;
   border-radius: 8px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1%);
   padding: 16px 0;
 }
 
