--- a/src/Divider/Divider.module.css
+++ b/src/Divider/Divider.module.css
@@ -32,9 +32,9 @@
 /* Text divider */
 .innerText {
   position: absolute;
-  background-color: #ffffff;
+  background-color: #fff;
   padding: 0 16px;
-  color: #333333;
+  color: #333;
   font-size: 14px;
   white-space: nowrap;
   transform: translateY(-50%);
