--- a/src/Layout/Layout.module.css
+++ b/src/Layout/Layout.module.css
@@ -13,7 +13,7 @@
   height: 64px;
   padding: 0 24px;
   background-color: #fff;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1%);
   display: flex;
   align-items: center;
   justify-content: space-between;
