--- a/src/Result/Result.module.css
+++ b/src/Result/Result.module.css
@@ -7,7 +7,7 @@
   text-align: center;
   background-color: #fff;
   border-radius: 8px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.09);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.09%);
 }
 
 .resultIcon {
@@ -148,7 +148,7 @@
 @media (prefers-color-scheme: dark) {
   .result {
     background-color: #1f1f1f;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3%);
   }
 
   .resultTitle {
