--- a/src/Switch/Switch.module.css
+++ b/src/Switch/Switch.module.css
@@ -36,7 +36,7 @@
   border-radius: 50%;
   background-color: #fff;
   transition: all 0.3s;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15%);
 }
 
 .switchInput:checked + .switchInner::after {
