--- a/src/Upload/Upload.module.css
+++ b/src/Upload/Upload.module.css
@@ -86,7 +86,7 @@
 
 .uploadListItem:hover {
   border-color: #e0e0e0;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05%);
 }
 
 .uploadListItemInfo {
